# rollback

./: .coveragerc  .flake8  .gitignore  .pylintrc  .python-version  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  rollback.py  setup.cfg  setup.py  tox.ini
.github/workflows/: checks.yml  release.yml
tests/: rollback_functional_tests.py  test_rollback.py
